# AirLLM

./: README.md  pyproject.toml
buscraft/: __init__.py  cli.py
buscraft/api/: __init__.py  app.py
buscraft/ingest/: __init__.py  assertions.py  scoreboard.py  uvm.py
buscraft/kb/: __init__.py  patterns.py
buscraft/models/: __init__.py  hypothesis.py  inference.py  reasoning_document.py  schema_export.py  validation.py  wave_contracts.py
buscraft/protocols/: __init__.py  loader.py
buscraft/protocols/templates/: ahb.yml  apb.yaml  axi4_lite.yaml  fifo.yaml  noc.yaml
buscraft/reason/: __init__.py  classifier.py  guardrails.py  orchestrator.py  prompts.py
buscraft/runtime/: __init__.py  backend.py  download.py  fallback.py  llamacpp.py  manager.py  manifest.py  ram_tier.py  remote_openai.py
buscraft/session/: __init__.py  store.py
buscraft/transform/: __init__.py  build_document.py  chunk.py
buscraft/viz/: __init__.py  dot.py  graph.py  ranker.py
buscraft/wave/: __init__.py  correlation.py  gtkwave.py  slicer.py  vcd_reader.py
tests/: test_smoke.py
