[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buscraft"
version = "0.1.0"
description = "Buscraft++ — local-first AI debugging assistant for hardware verification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "httpx>=0.26.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "networkx>=3.2.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "ruff>=0.1.0"]

[project.scripts]
buscraft = "buscraft.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["buscraft"]

[tool.hatch.build.targets.sdist]
include = ["buscraft"]
